--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.biblicalstudies">
 
+    <uses-permission android:name="android.permission.VIBRATE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,7 +12,8 @@
         android:theme="@style/AppTheme">
 
 
-        <activity android:name="com.example.biblicalstudies.HomeDefault" android:screenOrientation="portrait">
+        <activity android:name="com.example.biblicalstudies.HomeDefault" android:launchMode="singleTask"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,8 +21,10 @@
             </intent-filter>
 
         </activity>
-        <activity android:name="com.example.biblicalstudies.SignIn" android:screenOrientation="portrait"/>
+        <activity android:name="com.example.biblicalstudies.SignIn" android:launchMode="singleTask"
+            android:screenOrientation="portrait"/>
         <activity android:name="com.example.biblicalstudies.AddData"  android:screenOrientation="portrait"
+            android:launchMode="singleTask"
             android:windowSoftInputMode="adjustPan"/>
         
         <meta-data android:name="com.facebook.sdk.ApplicationId"
