--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,28 +5,41 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/launcher_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/launcher_icon_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.biblicalstudies.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
 
-        <activity android:name="com.example.biblicalstudies.HomeDefault" android:launchMode="singleTask"
+        <activity android:name="com.example.biblicalstudies.SplashScreen" android:launchMode="singleTask"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
+        <activity android:name="com.example.biblicalstudies.HomeDefault" android:launchMode="singleTask"
+            android:screenOrientation="portrait"/>
         <activity android:name="com.example.biblicalstudies.SignIn" android:launchMode="singleTask"
             android:screenOrientation="portrait"/>
         <activity android:name="com.example.biblicalstudies.AddData"  android:screenOrientation="portrait"
             android:launchMode="singleTask"
             android:windowSoftInputMode="adjustPan"/>
-        
+        <activity android:name="com.example.biblicalstudies.LockAcitivity" android:launchMode="singleTask"
+            android:screenOrientation="portrait"/>
+        <activity android:name="com.example.biblicalstudies.LockAccessActivity" android:launchMode="singleTask"
+            android:screenOrientation="portrait"/>
+
         <meta-data android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id"/>
 
@@ -48,6 +61,7 @@
 
     </application>
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
 
