--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,8 @@
             android:screenOrientation="portrait"/>
         <activity android:name="com.example.biblicalstudies.LockAccessActivity" android:launchMode="singleTask"
             android:screenOrientation="portrait"/>
+        <activity android:name="com.example.biblicalstudies.SetAbout" android:launchMode="singleTask"
+            android:screenOrientation="portrait"/>
 
         <meta-data android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id"/>
